# spin-env-explorer

./: Cargo.toml  Dockerfile  deploy.yaml  spin.toml
frontend/: index.html
src/: lib.rs
